# EdgaEnging2D

./: CMakeLists.txt
resources/shaders/: default_fragment.glsl  default_vertexe.glsl
src/: Shaders.cpp  Shaders.h  main.cpp
src/Loader/: Loader.cpp  Loader.h
src/Renderer/: Shaders.cpp  Shaders.h
